# picolibc-rs

./: .gitmodules  Cargo.toml  Justfile  README.md  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/sys/: Cargo.toml  build.rs
crates/sys/src/: lib.rs
crates/sys/stubs/: clock.c  errno.c  sbrk.c  start.c  tls.c
src/: emutls.rs  host.rs  io.rs  lib.rs  panic.rs  process.rs  thread.rs  time.rs
src/host/: linux.rs
src/io/: errno.rs
src/stubs/: errno.rs  io.rs  mod.rs  process.rs  sbrk.rs  time.rs  tls.rs
