[workspace]
members = [
    "crates/demo",
    "crates/sys",
    "crates/macros",
    ".",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
picolibc-sys = { path = "crates/sys" }
picolibc-macros = { path = "crates/macros" }
picolibc = { path = "." }

[package]
name = "picolibc"
version.workspace = true
edition.workspace = true

[dependencies]
picolibc-sys.workspace = true
picolibc-macros.workspace = true
libc_alloc = { version = "1.0.7" }
anyhow = { version = "1", default-features = false }

# optional
linux-syscall = { version = "1.2.0", optional = true }
linux-errno = { version = "1.1.0", optional = true }

[features]
default = ["linux"]
linux = ["dep:linux-syscall", "dep:linux-errno"]